排行榜桌機版完成，有成功輸入七本書籍。

--- a/src/components/Sponsor.astro
+++ b/src/components/Sponsor.astro
@@ -1,6 +1,5 @@
 ---
-import {pgwWrap} from "../js/pgw.js";
-
+import { pgwWrap } from "../js/pgw.js";
 ---
 
 <section class="sponsor">
@@ -13,11 +12,11 @@ import {pgwWrap} from "../js/pgw.js";
         target="_blank"
         rel="noopener noreferrer"
       >
-        <img
+        <!-- <img
           class="sponsor__image sponsor__image--udn"
           src={pgwWrap("/image/udnlogo.png")}
           alt="聯合線上"
-        />
+        /> -->
       </a>
     </div>
     <div class="sponsor__block">
@@ -165,7 +164,7 @@ import {pgwWrap} from "../js/pgw.js";
     @media (max-width: 450px) {
       height: 912px;
       margin-top: -1%;
-       background-image: url("/image/footer-imgM.webp");
+      background-image: url("/image/footer-imgM.webp");
     }
 
     &__container {
