--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,9 +10,7 @@ import Rolltop from "../components/Rolltop.astro";
 import { pgwWrap } from "../js/pgw.js";
 
 // 預先處理圖片URL
-const bgImageUrl = pgwWrap("/image/bg3b.png");
-const bgImageMobileUrl = pgwWrap("./image/bg3bM.png", true); // 手機版不使用PGW
-const starImageUrl = pgwWrap("/image/star.png");
+const bgImageUrl = "/image/500bowlbg.png";
 
 // 生成內聯樣式
 const articleStyle = `background-image: url('${bgImageUrl}');`;
@@ -24,7 +22,6 @@ const articleStyle = `background-image: url('${bgImageUrl}');`;
   <section class="articles" style={articleStyle}>
     <div class="topthree-container">
       <Topthree />
-      <img src={starImageUrl} alt="" />
     </div>
     <Booklist />
   </section>
@@ -47,18 +44,6 @@ const articleStyle = `background-image: url('${bgImageUrl}');`;
       @media (max-width: 450px) {
         margin-top: -160px; /* 控制 Topthree 與 Banner 重疊的程度 */
       }
-      img {
-        position: absolute;
-        top: 370px;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 100%;
-        height: auto;
-        z-index: -1; /* 確保圖片在內容下方 */
-        @media (max-width: 768px) {
-          display: none;
-        }
-      }
     }
 
     .articles {
@@ -70,20 +55,4 @@ const articleStyle = `background-image: url('${bgImageUrl}');`;
       }
     }
   </style>
-
-  <script define:vars={{ bgImageMobileUrl }}>
-    // 為移動裝置設置背景圖片
-    if (window.innerWidth <= 450) {
-      document.querySelector(".articles").style.backgroundImage = `url('${bgImageMobileUrl}')`;
-    }
-
-    // 監聽窗口大小變化
-    window.addEventListener("resize", () => {
-      const articlesElement = document.querySelector(".articles");
-      if (window.innerWidth <= 450) {
-        articlesElement.style.backgroundImage = `url('${bgImageMobileUrl}')`;
-      } else {
-      }
-    });
-  </script>
 </Layout>
