桌機版大致上完成，剩下彈窗以及banner動態效果，以及後端機制處理問題，好啦，沒有散是大致上完成。

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -122,7 +122,7 @@ import { pgwWrap } from "../js/pgw.js";
   });
 </script>
 
-<style lang="scss">
+<style lang="scss" scoped>
   .banner {
     width: 100%;
     height: auto;
@@ -252,5 +252,8 @@ import { pgwWrap } from "../js/pgw.js";
         }
       }
     }
+  }
+  .banner__bottomimg {
+    margin-bottom: 0.5%;
   }
 </style>
