--- a/src/components/topthree.astro
+++ b/src/components/topthree.astro
@@ -376,7 +376,7 @@ import { pgwWrap } from "../js/pgw.js";
       align-items: center;
     }
 
-    /* 卡片內圖片 - 修改為方形圖片以適合食物圖片 */
+    /* 卡片內圖片 */
     &__image img {
       width: 100%;
       max-width: 80px;
