桌機剩下機制彈窗還沒修改。

--- a/src/components/Sponsor.astro
+++ b/src/components/Sponsor.astro
@@ -2,6 +2,9 @@
 import { pgwWrap } from "../js/pgw.js";
 ---
 
+<div class="banner__bottomimg">
+  <img src="/image/banner_bottomimg.png" alt="Banner Bottom Image" />
+</div>
 <section class="sponsor">
   <div class="splide" id="food-splide">
     <div class="splide__track">
@@ -55,7 +58,7 @@ import { pgwWrap } from "../js/pgw.js";
       pagination: false,
       autoScroll: {
         speed: 1,
-        pauseOnHover: true,
+        pauseOnHover: false,
         pauseOnFocus: false,
       },
       breakpoints: {
