--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -133,7 +133,7 @@ import "../styles/global.css";
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      background: #ebe549;
+      background: #ebe54a;
     }
   </style>
 </html>
