--- a/src/pages/rules.astro
+++ b/src/pages/rules.astro
@@ -4,7 +4,9 @@ import Banner from "../components/Banner.astro";
 import Nav from "../components/Nav.astro";
 import Foot from "../components/foot.astro";
 import Rolltop from "../components/Rolltop.astro";
-import {pgwWrap} from "../js/pgw.js";
+import Spnosor from "../components/Sponsor.astro";
+import Act from "../components/Act.astro";
+import { pgwWrap } from "../js/pgw.js";
 
 // 預先處理圖片URL
 const bgImageUrl = pgwWrap("/image/bg3b.png");
@@ -17,18 +19,17 @@ const articleStyle = `background-image: url('${bgImageUrl}');`;
 <Layout>
   <Nav />
   <Banner />
+  <Act />
   <Rolltop />
+  <Spnosor />
   <Foot />
 
-  <style lang="scss">
+  <style lang="scss"></style>
 
-  </style>
-
-  <script define:vars={{bgImageMobileUrl}}>
+  <script define:vars={{ bgImageMobileUrl }}>
     // 為移動裝置設置背景圖片
     if (window.innerWidth <= 450) {
-      document.querySelector(".articles").style.backgroundImage =
-        `url('${bgImageMobileUrl}')`;
+      document.querySelector(".articles").style.backgroundImage = `url('${bgImageMobileUrl}')`;
     }
 
     // 監聽窗口大小變化
