--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -62,7 +62,7 @@ import { pgwWrap } from "../js/pgw.js";
             >
           </div>
         </li>
-        <li id="logout-item" style="display: block;">
+        <li id="logout-item" style="display:none;">
           <a href="#" id="logout-link" class="active-link">登出</a>
         </li>
       </ul>
